# test_docker_react_fastapi_mariadb

./: docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
db/: Dockerfile  my.cnf
db/data/: .my-healthcheck.cnf  aria_log_control  mysql-bin.000001  mysql-bin.000002  mysql-bin.000003  mysql-bin.000004  mysql-bin.000005  mysql-bin.000006  mysql-bin.000007  mysql-bin.000008  mysql-bin.000009  mysql-bin.000010  mysql-bin.000011  mysql-bin.000011.idx  mysql-bin.000012  mysql-bin.000013  mysql-bin.000014  mysql-bin.000015  mysql-bin.000015.idx  mysql-bin.000016  mysql-bin.000017  mysql-bin.000018  mysql-bin.000019  mysql-bin.index
db/data/docker_test_db/: docker_test_table.frm  docker_test_table.ibd
db/data/mysql/: column_stats.MAI  column_stats.frm  columns_priv.MAI  columns_priv.frm  db.MAD  db.MAI  db.frm  event.MAI  event.frm  func.MAI  func.frm  general_log.frm  global_priv.MAD  global_priv.MAI  global_priv.frm  gtid_slave_pos.frm  help_category.MAI  help_category.frm  help_keyword.MAI  help_keyword.frm  help_relation.MAI  help_relation.frm  help_topic.MAI  help_topic.frm  index_stats.MAI  index_stats.frm  innodb_index_stats.frm  innodb_index_stats.ibd  innodb_table_stats.frm  innodb_table_stats.ibd  plugin.MAI  plugin.frm  proc.MAD  proc.MAI  proc.frm  procs_priv.MAI  procs_priv.frm  proxies_priv.MAD  (+23 more)
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
mariadb/data/: .my-healthcheck.cnf  aria_log_control  mysql-bin.000001  mysql-bin.000002
(+273 files in other folders)
